fixed grid spacing

--- a/creospan-angular-trainging/src/app/app.component.css
+++ b/creospan-angular-trainging/src/app/app.component.css
@@ -19,7 +19,7 @@
 
 .grid-container {
     display: inline-grid;
-    grid-template-rows: auto;
+    grid-template-rows: auto auto auto;
     grid-template-columns: auto auto;
     width:50%;
     padding: 10px;
